TIPROCS-11868 - refactoring